# token-savior

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  server.json
.github/workflows/: benchmark.yml  ci.yml  pages.yml  publish.yml  retrieval-benches.yml
benchmarks/: tool_capture_bench.py  tool_capture_results.json
docs/: design-semantic-code-tools.md  index.html  matrix.json  mcp_toolset.example.json
docs/migration/: v3.md
hooks/: bash-rewriter-config.json  bash_rewriter_hook.py  memory-hooks-config.json  memory-posttooluse.sh  memory-precompact.sh  memory-pretooluse.sh  memory-session-start.sh  memory-session-stop.sh  memory-userprompt.sh  tool-capture-codex.json  tool-capture-cursor.json  tool-capture-gemini.json  tool-capture-hooks-config.json  tool_capture_hook.py
scripts/: bench_compactors_real.py  bench_compactors_unmatched.py  check_bench_gates.py  preflight.sh  ts-daemon.service  ts-trace-analysis.sh  ts_audit.py
src/token_savior/: __init__.py  _compat.py  breaking_changes.py  cli.py  daemon_client.py  db_core.py  db_schema.py  edit_ops.py  git_tracker.py  impacted_tests.py  latency.py  memory_schema.sql  project_actions.py  project_indexer.py  query_api.py  ruby_annotator.py  server.py  server_runtime.py  server_state.py  slot_manager.py  telemetry.py  tool_schemas.py
tests/: conftest.py  test_auto_profile.py  test_bash_rewriter.py  test_chain_nudge.py  test_cli_init.py  test_code_mode.py  test_compactors.py  test_compactors_cloud_pkg.py  test_compactors_grep_find_cat.py  test_compactors_round3.py  test_compactors_test_lint.py  test_compound_splitter.py  test_daemon_client.py  test_discover.py  test_edit_impact.py  test_issue_32_mcp_textcontent.py  test_markup_ruby.py  test_nudge_telemetry.py  test_project_hint.py  test_project_indexer.py  test_query_api.py  test_registered_persistence.py  test_resources.py  test_server_integration.py  test_server_tools.py  test_tca_flush_wiring.py  test_telemetry.py  test_tool_capture.py  test_tool_capture_hybrid.py  test_tool_embed_disk_cache.py  test_tool_schemas.py  test_ts_search_cold_delegate.py  test_ts_search_warmup.py  test_usage_stats.py  test_watcher.py
(+68 files in other folders)
